SOLR-13394: Change default GC from CMS to G1